# servo-ctrl

./: ..\data\data.Curpos  ..\data\data.Refpos  .gitignore  CMakeLists.txt  README.md  bash.sh  data.json
Backup/: .template.cpp.swp  Readme  note.md  template.cpp
SdkTest/: SdkTest  SdkTest.sln  SdkTest.vcxproj  SdkTest.vcxproj.filters  build.sh  main.c
SdkTest/Debug/: SdkTest.ilk  vc142.idb
SdkTest/Debug/SdkTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SdkTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/: WzSerialPort.cpp  dataExchange.cpp  dataSave.cpp  main.cpp  pathplanning.cpp  pidctrl.cpp  rmctrl.cpp  rscv.cpp  servo.cpp  test.cpp  time.cpp  trajectory.cpp
data/: data.Curpos  data.Refpos  data.position
include/: WzSerialPort.h  common.h  dataexchange.h  interface.h  motion_axis.h  pidctrl.h  rmctrl.h  rscv.h  servo.h  system.h  trajectory.h  usb-daq-v20.h
note/: affinity.md  log.md  note.md  pointer.md
